--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-    <include layout="@layout/tool_bar" />
+    <include layout="@layout/tool_bar"/>
 
 
     <ViewFlipper
@@ -37,7 +37,7 @@
                 android:textColor="@color/fifty_white"
                 android:textColorHint="@color/thirtyfive_white"
                 android:textSize="14sp"
-                android:theme="@style/MyEditTextTheme" />
+                android:theme="@style/MyEditTextTheme"/>
 
             <Button
                 android:id="@+id/forgot_password_verify_email_button"
@@ -47,14 +47,15 @@
                 android:background="@color/secondaryColor"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:text="Next"
-                android:textColor="@color/pure_white" />
+                android:textColor="@color/pure_white"/>
 
             <ProgressBar
                 android:id="@+id/forgotPass_progress_bar0"
                 style="?android:attr/progressBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone" />
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone"/>
 
         </LinearLayout>
 
@@ -66,11 +67,10 @@
             android:orientation="vertical">
 
 
-
             <android.support.v4.widget.Space
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"/>
 
 
             <TextView
@@ -80,7 +80,7 @@
                 android:layout_marginRight="32dp"
                 android:gravity="center"
                 android:text="A verification code was sent to:"
-                android:textColor="@color/thirtyfive_white" />
+                android:textColor="@color/thirtyfive_white"/>
 
             <TextView
                 android:id="@+id/forgotPass_email_confirm_text_view"
@@ -93,7 +93,7 @@
                 android:gravity="center"
                 android:textColor="@color/secondaryColor"
                 android:textStyle="bold"
-                tools:text="blahblah@cuny.edu" />
+                tools:text="blahblah@cuny.edu"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -102,7 +102,7 @@
                 android:layout_marginRight="32dp"
                 android:gravity="center"
                 android:text="Please enter the code below. (Note: The email might have been marked as spam)"
-                android:textColor="@color/thirtyfive_white" />
+                android:textColor="@color/thirtyfive_white"/>
 
             <EditText
                 android:id="@+id/forgotPass_verify_code"
@@ -120,7 +120,7 @@
                 android:textColor="@color/fifty_white"
                 android:textColorHint="@color/thirtyfive_white"
                 android:textSize="14sp"
-                android:theme="@style/MyEditTextTheme" />
+                android:theme="@style/MyEditTextTheme"/>
 
             <LinearLayout
                 android:id="@+id/forgotPass_code_verify_buttons"
@@ -149,7 +149,7 @@
                     android:background="@color/secondaryColor"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:text="Next"
-                    android:textColor="@color/pure_white" />
+                    android:textColor="@color/pure_white"/>
             </LinearLayout>
 
 
@@ -158,12 +158,13 @@
                 style="?android:attr/progressBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone" />
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone"/>
 
             <android.support.v4.widget.Space
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"/>
 
 
         </LinearLayout>
@@ -190,7 +191,7 @@
                 android:textColor="@color/fifty_white"
                 android:textColorHint="@color/thirtyfive_white"
                 android:textSize="14sp"
-                android:theme="@style/MyEditTextTheme" />
+                android:theme="@style/MyEditTextTheme"/>
 
             <Button
                 android:id="@+id/forgotPass_change_password"
@@ -200,14 +201,15 @@
                 android:background="@color/secondaryColor"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:text="Change"
-                android:textColor="@color/pure_white" />
+                android:textColor="@color/pure_white"/>
 
             <ProgressBar
                 android:id="@+id/forgotPass_progress_bar2"
                 style="?android:attr/progressBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone" />
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone"/>
         </LinearLayout>
     </ViewFlipper>
 
