--- a/app/src/main/res/drawable/rating_progressbar.xml
+++ b/app/src/main/res/drawable/rating_progressbar.xml
@@ -7,7 +7,7 @@
             <solid android:color="@android:color/transparent"/>
             <stroke
                 android:width="2dp"
-                android:color="@color/secondaryColor"/>
+                android:color="@color/inactive_grey"/>
             <corners android:radius="4dp"/>
         </shape>
     </item>
@@ -15,7 +15,7 @@
         <clip>
             <shape>
                 <corners android:radius="4dp"/>
-                <solid android:color="@color/secondaryColor"/>
+                <solid android:color="@color/inactive_grey"/>
             </shape>
         </clip>
     </item>
