added action icon in ProfileFragment to toggle between feed and thumbnail view

--- a/app/src/main/res/menu/my_profile_action_bar.xml
+++ b/app/src/main/res/menu/my_profile_action_bar.xml
@@ -16,4 +16,10 @@
         android:icon="@drawable/ic_action_update"
         app:showAsAction="always"/>
 
+    <item android:id="@+id/menu_switch_layout"
+        android:title="Switch Layout"
+        android:icon="@drawable/ic_view_module_white_24dp"
+        app:showAsAction="ifRoom"
+        />
+
 </menu>
