--- a/app/src/main/res/menu/tapt_user_profile_menu.xml
+++ b/app/src/main/res/menu/tapt_user_profile_menu.xml
@@ -9,4 +9,10 @@
           android:icon="@drawable/ic_action_navigation_more_vert"
     />
 
+    <item android:id="@+id/menu_switch_layout"
+        android:title="Switch Layout"
+        android:icon="@drawable/ic_view_module_white_24dp"
+        app:showAsAction="ifRoom"
+        />
+
 </menu>
