--- a/app/src/main/res/layout/material_search_toolbar.xml
+++ b/app/src/main/res/layout/material_search_toolbar.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:navigationIcon="@drawable/ic_action_navigation_arrow_back"
-    android:layout_height="?actionBarSize">
+    android:layout_height="?actionBarSize"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,4 +30,4 @@
             android:src="@drawable/ic_action_content_clear"
             android:visibility="invisible"/>
     </LinearLayout>
-</android.support.v7.widget.Toolbar>
+</merge>
