--- a/app/src/main/res/layout/fragment_feed_detail_page.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page.xml
@@ -87,7 +87,8 @@
                     android:layout_gravity="center"
                     android:padding="4dp"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/ic_upload_picture"/>
+                    android:src="@drawable/ic_upload_picture"
+                    android:visibility="invisible"/>
 
                 <ProgressBar
                     android:id="@+id/comment_progressbar"
