--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -1,95 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.daimajia.swipe.SwipeLayout android:id="@+id/comment_swipe_layout"
-                                xmlns:android="http://schemas.android.com/apk/res/android"
-                                xmlns:app="http://schemas.android.com/apk/res-auto"
-                                xmlns:tools="http://schemas.android.com/tools"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                app:leftEdgeSwipeOffset="0dp"
-                                app:rightEdgeSwipeOffset="0dp">
-
-
-    <!--left_controls right now is only like button so i won't give it a parent
-        left_controls == like_button-->
-    <FrameLayout
-        android:id="@+id/left_controls"
-        android:layout_width="60dp"
-        android:layout_height="match_parent"
-        android:background="@color/red">
-
-        <ImageView
-            android:id="@+id/like"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_fire"/>
-
-    </FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/right_controls"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <FrameLayout
-            android:id="@+id/comment_delete"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:background="#c8c7cd">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_action_delete"/>
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/comment_reveal"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:background="#5ccdc9">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_action_reveal"/>
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/comment_report"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:background="#ff9000">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_action_whistle14"/>
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/comment_reply"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:background="#27425a">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_action_reply"/>
-
-        </FrameLayout>
-
-    </LinearLayout>
-
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/comment_swipe_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/feed_detail_main"
@@ -107,16 +22,15 @@
             <com.linute.linute.UtilsAndHelpers.ProfileImageView
                 android:id="@+id/comment_user_image"
                 android:layout_width="@dimen/profile_image_radius"
-                android:layout_height="@dimen/profile_image_radius"
-            />
+                android:layout_height="@dimen/profile_image_radius" />
+
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/privacy_changed"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_gravity="bottom|right"
                 android:src="@drawable/ic_revealed_icon"
-                android:visibility="gone"
-            />
+                android:visibility="gone" />
         </FrameLayout>
 
         <LinearLayout
@@ -128,21 +42,23 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
 
-            <LinearLayout android:layout_width="match_parent"
-                          android:layout_height="wrap_content"
-                          android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/comment_user_name"
                     android:layout_width="0px"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:ellipsize="end"
-                    android:layout_gravity="center_vertical"
                     android:lines="1"
                     android:textColor="@color/user_name_blue"
                     android:textSize="@dimen/body_font_size"
                     android:textStyle="bold"
-                    tools:text="Name NameName Nddsa adasd asdaddame"/>
+                    tools:text="Name NameName Nddsa adasd asdaddame" />
 
                 <TextView
                     android:id="@+id/comment_time_ago"
@@ -153,7 +69,7 @@
                     android:paddingEnd="16dp"
                     android:textColor="@color/twentyfive_black"
                     android:textSize="@dimen/sub_font_size"
-                    tools:text="1h"/>
+                    tools:text="1h" />
 
                 <TextView
                     android:id="@+id/num_likes"
@@ -164,7 +80,7 @@
                     android:gravity="center"
                     android:lines="1"
                     android:textColor="@color/fifty_black"
-                    android:textSize="@dimen/sub_font_size"/>
+                    android:textSize="@dimen/sub_font_size" />
 
                 <ImageView
                     android:id="@+id/fire_icon"
@@ -173,10 +89,10 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="2dp"
                     android:src="@drawable/ic_fire"
-                    android:tint="@color/red"/>
+                    android:tint="@color/red" />
             </LinearLayout>
 
 
         </LinearLayout>
     </LinearLayout>
-</com.daimajia.swipe.SwipeLayout>
+</FrameLayout>
