--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -94,6 +94,16 @@
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <View
+        android:id="@+id/feed_detail_hidden_animation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.3"
+        android:background="#EA294C"
+        android:visibility="invisible"
+        />
+
     <LinearLayout
         android:id="@+id/feed_detail_main"
         android:layout_width="match_parent"
@@ -182,6 +192,7 @@
 
         </LinearLayout>
     </LinearLayout>
+
     <FrameLayout
         android:id="@+id/feed_detail_touch"
         android:layout_width="match_parent"
