--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -72,5 +72,8 @@
     <color name="global_friend_orange">#F5A623</color>
     <color name="edit_fragment_meme_text_bg">#CC173856</color>
 
+    <color name="red_like">#EA294C</color>
+    <color name="red_unlike">#2936ea</color>
+
 </resources>
 
