--- a/app/src/main/res/layout/article_element_author.xml
+++ b/app/src/main/res/layout/article_element_author.xml
@@ -5,8 +5,6 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
