--- a/app/src/main/res/layout/article_element_paragraph.xml
+++ b/app/src/main/res/layout/article_element_paragraph.xml
@@ -5,5 +5,7 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 </FrameLayout>
