--- a/app/src/main/res/layout/article_element_title.xml
+++ b/app/src/main/res/layout/article_element_title.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        tools:text="Title"
+        android:padding="4dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 </FrameLayout>
