--- a/app/src/main/res/drawable/rounded_corner_button.xml
+++ b/app/src/main/res/drawable/rounded_corner_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <solid android:color="@color/secondaryColor"/>
+    <solid android:color="#50E3C2"/>
     <corners android:radius="1000dp"/>
 </shape>
