--- a/app/src/main/res/layout/profile_grid_item_2.xml
+++ b/app/src/main/res/layout/profile_grid_item_2.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="4dp">
+    android:layout_margin="2dp"
+    android:foreground="?selectableItemBackground"
+>
 
-    <com.makeramen.roundedimageview.RoundedImageView android:id="@+id/profile_grid_item_image"
-        app:riv_corner_radius="@dimen/post_create_corner_radius"
+    <ImageView
+        android:id="@+id/profile_grid_item_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         tools:src="@drawable/image_loading_background"
-        />
+    />
+
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_cinema"
+    />
 
 
 </com.linute.linute.UtilsAndHelpers.SquareFrameLayout>
