--- a/app/src/main/res/layout/article_element_author.xml
+++ b/app/src/main/res/layout/article_element_author.xml
@@ -5,6 +5,12 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:gravity="left"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="@color/user_name_blue"
+        />
 
 </FrameLayout>
