--- a/app/src/main/res/layout/article_element_image.xml
+++ b/app/src/main/res/layout/article_element_image.xml
@@ -5,8 +5,9 @@
     >
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:scaleType="centerCrop"
         />
 </FrameLayout>
