--- a/app/src/main/res/layout/article_element_paragraph.xml
+++ b/app/src/main/res/layout/article_element_paragraph.xml
@@ -7,5 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textSize="14sp"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="#ff4a4a4a" />
 </FrameLayout>
