--- a/app/src/main/res/layout/article_element_title.xml
+++ b/app/src/main/res/layout/article_element_title.xml
@@ -7,7 +7,13 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Title"
-        android:padding="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+        tools:text="Sasha Obama Has a Big Announcement"
+        android:padding="8dp"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:typeface="sans"
+        android:fontFamily="sans-serif-condensed"
+        android:textAllCaps="true"
+        android:textColor="@color/pure_black"
+        />
 </FrameLayout>
