--- a/app/src/main/res/layout/global_item.xml
+++ b/app/src/main/res/layout/global_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -21,12 +20,12 @@
         app:riv_corner_radius="8dp"
         tools:src="@color/seperator_color"/>
 
+
     <TextView
-        android:id="@+id/text1"
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:layout_gravity="center"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:ellipsize="end"
@@ -34,38 +33,19 @@
         android:shadowColor="#59000000"
         android:shadowDy="2"
         android:shadowRadius="1"
+        android:textAllCaps="true"
         android:textColor="@color/pure_white"
-        android:textSize="14sp"
-        tools:text="Oleg! Where have u been"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        tools:text="BACK TO SCHOOL"
     />
 
-    <TextView android:id="@+id/text"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_above="@id/text1"
-              android:layout_marginEnd="@dimen/activity_horizontal_margin"
-              android:layout_marginStart="@dimen/activity_horizontal_margin"
-              android:ellipsize="end"
-              android:lines="1"
-              android:shadowColor="#59000000"
-              android:shadowDy="2"
-              android:shadowRadius="1"
-              android:textAllCaps="true"
-              android:textColor="@color/pure_white"
-              android:textSize="26sp"
-              android:textStyle="bold"
-              tools:text="BACK TO SCHOOL"
-    />
+    <TextView
+        android:id="@+id/new_posts"
+        android:drawableStart="@drawable/ic_book"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
-    <View
-        android:id="@+id/indicator"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:background="@drawable/circle_secondary"
-    />
 
-</RelativeLayout>
+</FrameLayout>
