--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,8 +59,8 @@
 
     <color name="inactive_grey">#979797</color>
 
-    <color name="global_hot_red">#D0021B</color>
-    <color name="global_friend_orange">#F5A623</color>
+    <color name="global_hot">#E35093</color>
+    <color name="global_friend">#62CBE2</color>
     <color name="edit_fragment_meme_text_bg">#CC173856</color>
 
 </resources>
