--- a/app/src/main/res/layout/global_item.xml
+++ b/app/src/main/res/layout/global_item.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:ellipsize="end"
-        android:lines="1"
+        android:maxLines="2"
         android:shadowColor="#59000000"
         android:shadowDy="2"
         android:shadowRadius="1"
@@ -42,22 +42,23 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/half_margin"
         android:orientation="horizontal"
     >
 
         <ImageView
             android:layout_width="16dp"
             android:layout_height="16dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginEnd="8dp"
             android:src="@drawable/ic_book"
         />
 
         <TextView
-            android:id="@+id/new_posts"
+            android:id="@+id/views"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -65,7 +66,36 @@
             android:textColor="@color/pure_white"
             android:textSize="14sp"/>
 
+
+        <Space
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/source"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="bloomberg"
+            android:textColor="@color/pure_white"
+            android:textSize="14sp"
+        />
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/length"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|top"
+        android:layout_marginEnd="@dimen/half_margin"
+        android:drawableStart="@drawable/ic_action_av_play_arrow"
+        android:gravity="center_vertical"
+        android:textColor="@color/pure_white"
+        android:textSize="14sp"
+        tools:text="2:32"
+    />
 
 
 </FrameLayout>
