--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -34,13 +34,14 @@
         android:layout_gravity="center_horizontal|bottom"
         android:background="@drawable/bg_round_white"
         android:orientation="horizontal"
-        android:padding="4dp"
         android:layout_margin="16dp"
         android:elevation="4dp"
         >
 
         <LinearLayout
             android:id="@+id/menu_like"
+            android:padding="4dp"
+            android:paddingRight="12dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
@@ -64,19 +65,24 @@
                 android:textSize="@dimen/article_menu_text_size" />
         </LinearLayout>
 
+        <View
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="#e1e3e5" />
+
         <LinearLayout
             android:id="@+id/menu_comment"
+            android:padding="4dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:clickable="true"
             >
 
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:layout_margin="8dp"
-                android:background="#e1e3e5" />
 
             <ImageView
                 android:layout_width="@dimen/article_menu_icon_radius"
@@ -94,15 +100,20 @@
                 android:textColor="#1f2f42"
                 android:textSize="@dimen/article_menu_text_size" />
 
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:layout_margin="8dp"
-                android:background="#e1e3e5" />
+
         </LinearLayout>
+
+        <View
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="#e1e3e5" />
 
         <LinearLayout
             android:id="@+id/menu_share"
+            android:padding="4dp"
+            android:paddingLeft="12dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
