--- a/app/src/main/res/layout/fragment_profile_header_part_2.xml
+++ b/app/src/main/res/layout/fragment_profile_header_part_2.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:background="@color/pure_white"
+    android:layout_marginTop="1dp"
+    android:layout_marginBottom="1dp"
     android:orientation="horizontal">
 
     <FrameLayout
@@ -24,7 +26,7 @@
     <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:background="#AAAAAA"/>
+        android:background="@color/seperator_color"/>
 
     <FrameLayout
         android:id="@+id/linear"
