--- a/app/src/main/res/layout/fragment_chat_settings.xml
+++ b/app/src/main/res/layout/fragment_chat_settings.xml
@@ -66,7 +66,7 @@
 
             <TextView
                 android:id="@+id/dm_user_name"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/dm_user_icon"
                 android:text="User Name"
